# learning_dbc_datasets

./: README.md  main.py  pyproject.toml
sephora_products_and_skincare_reviews/setup/: setup.ipynb
sephora_products_and_skincare_reviews/test_projects/: agent.py  agent_config.yaml  agent_config_pricing.yaml  agent_config_reviews.yaml  agent_pricing.py  agent_reviews.py  course_retrieval_agents_1.ipynb  course_retrieval_agents_2.ipynb  course_retrieval_agents_3.ipynb  course_retrieval_agents_4.ipynb  course_retrieval_agents_4_2.ipynb  course_retrieval_agents_5.ipynb  example.aget_config.yaml  product_recommender.ipynb  requirements.txt
