[project]
name = "learning-dbc-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-langchain==0.9.0",
    "databricks-vectorsearch==0.67",
    "langchain==1.0.0",
    "langgraph==1.0.10",
    "mlflow-skinny[databricks]==3.11.1",
]
